--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 	</ul>
 	</div>
 	<br><br>
+	<div style="padding-left: 15%;">
 	<a href="images/homephoto.jpg" target="_blank"><img class="homeimage" src="images/homephoto.jpg" width="520", height="300"></a>
+	</div>
 	<div class="homeimagetext"><font size="6"><b>Welcome to the Willard<br>NJROTC Homepage</b></font></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<div class="homeintro">
 	<br><hr><br>
