changed some things

--- a/contacts.html
+++ b/contacts.html
@@ -38,26 +38,26 @@
 		Email: steveburnett@willardschools.net<br>
 		Phone: (417) 742-3524 ext. 3314
 		
-		<br><br><hr><br>
+		<br><br><hr align="center", width="90%"><br>
 		
 		Master Sergeant Gary McClelland<br>
 		Naval Science Instructor<br>
 		Email: garymcclelland@willardschools.net<br>
 		Phone: (417) 742-3524 ext. 3315
 		
-		<br><br><hr><br>
+		<br><br><hr align="center", width="90%"><br>
 		
 		c/Commander Tory Butler<br>
 		Battalion Commander<br>
 		Email: torbut13@media.willardr2.net
 		
-		<br><br><hr><br>
+		<br><br><hr align="center", width="90%"><br>
 		
 		c/Lieutenant Commander Lisa Eldred<br>
 		Battalion Executive Officer<br>
 		Email: liseld20@media.willardr2.net
 		
-		<br><br><hr><br>
+		<br><br><hr align="center", width="90%"><br>
 		
 		c/Lieutenant - Junior Grade Quinn Ridings<br>
 		Website Manager/Editor<br>
