--- a/index.html
+++ b/index.html
@@ -24,8 +24,11 @@
 		<li class="dropdown" id="floatright">
 			<a href="javascript:void(0)" class="dropbtn">More</a>
 			<div class="dropdown-content">
+				<br>
 				<a href="contacts.html">Contacts</a>
+				<br>
 				<a href="student-resources.html">Student Resources</a>
+				<br>
 			</div>
 		</li>
 	</ul>
@@ -34,7 +37,7 @@
 	<div style="padding-left: 15%;">
 	<a href="images/homephoto.jpg" target="_blank"><img class="homeimage" src="images/homephoto.jpg" width="520", height="300"></a>
 	</div>
-	<div class="homeimagetext"><font size="6"><b>Welcome to the Willard<br>NJROTC Homepage</b></font></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+	<div class="homeimagetext" style="padding-right: 15%;"><font size="6"><b>Welcome to the Willard<br>NJROTC Homepage</b></font></div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 	<div class="homeintro">
 	<br><hr><br>
 		Willard High School's NJROTC program teaches students discipline, respect, self confidence, honor, courage, and commitment. Cadets learn about military life, as well as everyday skills such as health, and physical fitness. Cadets have the chance to compete for promotions, as well as performing jobs that military personnel do. These jobs include: Administration, Athletics, Academics, Supply, Public Affairs, Information Technology, and Operations. The skills that the cadets learn can help them if they choose to join the military, or if they choose a career in a civilian field. Dedicated cadets come out of the unit as more driven individuals striving to do their best.
