--- a/announcements.html
+++ b/announcements.html
@@ -34,17 +34,25 @@
 	</ul>
 	</div>
 	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
-	
+	<div class="announcments">
+	Current Announcements
+	<br>
+	UNIFORM OF THE WEEK (4/12/2017)<br>
+	2nd, 3rd, and 4th year cadets; PB's no medals.<br>
+	1st year cadets are only required to bring uniforms into class.
+	<br>
+	DEPARTMENT MEETINGS<br>
+	Department Head Meeting: Wednesday, August 30th at 1430
+	​<br>
+	DRILL/PT/SHOOTING MEETS
+	<br>
+	​​EVERYDAY EVENTS<br>
+	Drill: Mon, Tue, Thu<br>
+	Color Guard: Fri<br>
+	Academics: Fri<br>
+	PT: Tue mornings, Thu mornings, Wed<br>
+	Shooting: Everyday unless specified otherwise
 	</div>
+	</div>
+	
 </html>
